fix inline trip on mobile

--- a/styles/InlineTrip.module.css
+++ b/styles/InlineTrip.module.css
@@ -1,5 +1,4 @@
 .root {
-  width: 100%;
   border: 1px solid #f0f0f0;
   margin-bottom: 1rem;
   border-radius: 0.5rem;
